--- a/package.json
+++ b/package.json
@@ -38,8 +38,11 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-universal-links-plugin": "git+https://github.com/walteram/cordova-universal-links-plugin.git",
     "core-js": "^2.5.4",
-    "firebase": "^6.3.4",
+    "firebase": "^6.3.5",
+    "firebaseui": "^4.1.0",
+    "firebaseui-angular": "^4.0.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -86,7 +89,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-buildinfo": {},
       "cordova-plugin-browsertab": {},
-      "cordova-plugin-inappbrowser": {}
+      "cordova-plugin-inappbrowser": {},
+      "cordova-universal-links-plugin": {}
     },
     "platforms": [
       "android"
