--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "angularfire2": "^5.2.1",
     "cordova-android": "7.1.4",
     "cordova-plugin-browsertab": "0.2.0",
     "cordova-plugin-buildinfo": "2.0.3",
@@ -43,6 +44,7 @@
     "firebase": "^6.3.5",
     "firebaseui": "^4.1.0",
     "firebaseui-angular": "^4.0.0",
+    "promise-polyfill": "^8.1.3",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
